--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 
 dependencies {
     //Prefer the implementation configuration over api when possible
+    compileOnly 'org.projectlombok:lombok:1.18.8'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
     testImplementation('org.junit.jupiter:junit-jupiter:5.4.2')
