--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.8'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
-    testImplementation('org.junit.jupiter:junit-jupiter:5.4.2')
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
+    testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
     testImplementation('org.hamcrest:hamcrest-library:2.1')
 }
 
