--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
+    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    testCompile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
     testImplementation('org.hamcrest:hamcrest-library:2.1')
 }
