--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ plugins {
 
 group = 'org.blacksmith'
 version = '0.1.2'
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
@@ -28,6 +28,7 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.15.0'
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
     testImplementation 'org.blacksmith:blacksmith-test:0.1.0'
