--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ task sourceJar(type: Jar) {
     from sourceSets.main.allJava
 }
 
-//gradle publishToMavelNocal
+//gradle publishToMavenLocal
 publishing {
     publications {
         mavenJava(MavenPublication) {
