--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
 apply from: 'dependencies.gradle'
 
 group = 'org.blacksmith'
-version = libs.blackstmithCommonsVersion
+version = blacksmithCommonsVersion
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 compileJava.options.encoding = "UTF-8"
