--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -22,12 +22,6 @@ ext.libs = [
         logback: [
                 'ch.qos.logback:logback-classic:' + logbackVersion,
                 'ch.qos.logback:logback-core:' + logbackVersion],
-        blacksmithCommons: [
-                'org.blacksmith:blacksmith-commons:' + blacksmithCommonsVersion],
-        blacksmithFinlibBasic: [
-                'org.blacksmith:blacksmith-finlib-basic:' + blacksmithFinlibVersion],
-        blacksmithTest: [
-                'org.blacksmith:blacksmith-test:' + blacksmithTestVersion],
         assertj: [
                 'org.assertj:assertj-core:' + assertjVersion],
         cucumber: [
@@ -37,5 +31,7 @@ ext.libs = [
                 'org.junit.jupiter:junit-jupiter:' + junitVersion],
         mockito: [
                 'org.mockito:mockito-core:' + mockitoVersion
-        ]
+        ],
+        blacksmithTest: [
+                'org.blacksmith:blacksmith-test:' + blacksmithTestVersion]
 ]
