--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 blacksmithCommonsVersion=0.2.3
 blacksmithTestVersion=0.1.0
+jmhBenchmarVersion=1.32
 #
 apacheCommonsVersion=3.10
 apacheCommonsMathVersion=3.6.1
